refactor(jade): 重构Jade集成以支持创意模式存储容器
- 将CreativeCrateProvider重构为服务端提供者并创建对应的客户端提供者
- 将CreativeFluidTankProvider重构为服务端提供者并创建对应的客户端提供者
- 将LargeFluidTankProvider重构为服务端提供者并创建对应的客户端提供者
- 在CI工作流中添加Jade依赖版本配置
- 更新工作流配置以包含Jade作为额外模组依赖
- 实现创意模式物品箱的无限数量显示功能
- 实现创意模式流体罐的无限容量显示功能
- 优化流体罐的容量和数量显示逻辑